--- a/css/slit-slider.css
+++ b/css/slit-slider.css
@@ -158,7 +158,7 @@
 	background-image: url(../img/slider/ugadi.jpg);
 }
 .bg-img-2 {
-	background-image: url(../img/slider/affinity.jpeg);
+	background-image: url(../img/slider/kids.jpg);
 }
 .bg-img-3 {
 	background-image: url(../img/slider/cinelli.jpeg);
