--- a/css/slit-slider.css
+++ b/css/slit-slider.css
@@ -161,7 +161,7 @@
 	background-image: url(../img/slider/kids.jpg);
 }
 .bg-img-3 {
-	background-image: url(../img/slider/cinelli.jpeg);
+	background-image: url(../img/slider/cultural.jpg);
 }
 
 
