--- a/css/slit-slider.css
+++ b/css/slit-slider.css
@@ -158,10 +158,10 @@
 	background-image: url(../img/slider/ugadi.jpg);
 }
 .bg-img-2 {
-	background-image: url(../img/slider/kids.jpg);
+	background-image: url(../img/slider/kids2.jpeg);
 }
 .bg-img-3 {
-	background-image: url(../img/slider/cultural.jpg);
+	background-image: url(../img/slider/cultural2.jpeg);
 }
 
 
