--- a/css/slit-slider.css
+++ b/css/slit-slider.css
@@ -155,7 +155,7 @@
 }
 
 .bg-img-1 {
-	background-image: url(../img/slider/ugadi.jpg);
+	background-image: url(../img/slider/ugadi2.jpeg);
 }
 .bg-img-2 {
 	background-image: url(../img/slider/kids2.jpeg);
